avoid unwanted horizontal scrolling

--- a/docs/tailwind@aa4d3254b41ef596495786a1df80bdcc.css
+++ b/docs/tailwind@aa4d3254b41ef596495786a1df80bdcc.css
@@ -570,8 +570,12 @@ video {
   inset: 0px;
 }
 
-.-right-1 {
-  right: -0.25rem;
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .col-span-2 {
@@ -660,8 +664,8 @@ video {
   max-width: 20rem;
 }
 
-.translate-x-full {
-  --tw-translate-x: 100%;
+.translate-y-full {
+  --tw-translate-y: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
